--- a/groups/restrictions.yaml
+++ b/groups/restrictions.yaml
@@ -161,6 +161,7 @@ restrictions:
       - "^k8s-infra-staging-scheduler-plugins@kubernetes.io$"
       - "^k8s-infra-staging-sched-simulator@kubernetes.io$"
       - "^k8s-infra-staging-kueue@kubernetes.io$"
+      - "^k8s-infra-staging-kwok@kubernetes.io$"
       - "^sig-scheduling-leads@kubernetes.io$"
   - path: "sig-security/groups.yaml"
     allowedGroups:
